<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dp"
	android:orientation="vertical">
	<ScrollView android:layout_width="match_parent" android:id="@+id/scrollView1" android:layout_height="wrap_content">
		<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="match_parent" android:orientation="vertical">
			<TextView android:text="TextView" android:layout_height="fill_parent" android:id="@+id/text" android:textColor="#FFF" android:layout_width="wrap_content"></TextView>
			<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/takeno" android:text="@string/initno"></EditText>
			<TextView android:text="@string/instr_for_no" android:layout_height="wrap_content" android:id="@+id/instr_for_no" android:layout_width="wrap_content"></TextView>
			<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
				<ImageView android:layout_width="wrap_content" android:id="@+id/image" android:layout_height="fill_parent" android:layout_marginRight="10dp"></ImageView>
				<Button android:id="@+id/sendno" android:text="@string/done" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
